<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>no.nav</groupId>
    <artifactId>pensjon-brevdata</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>pensjon-brevdata</name>
    <description>Applikasjon for å hente brevdata til pensjon</description>

    <properties>
        <java.version>21</java.version>
        <asciidoctor-maven-plugin.version>3.2.0</asciidoctor-maven-plugin.version>
        <asciidoctorj-diagram.version>3.1.0</asciidoctorj-diagram.version>
        <graphviz-java.version>0.18.1</graphviz-java.version>
        <unleash-next.version>11.1.1</unleash-next.version>
        <springdoc.version>1.8.0</springdoc.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>io.getunleash</groupId>
            <artifactId>unleash-client-java</artifactId>
            <version>${unleash-next.version}</version>
        </dependency>

        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient</artifactId>
        </dependency>

        <dependency>
            <groupId>io.prometheus</groupId>
            <artifactId>simpleclient_common</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.ws.rs</groupId>
            <artifactId>jakarta.ws.rs-api</artifactId>
        </dependency>
        <dependency>
		  <groupId>com.google.guava</groupId>
		  <artifactId>guava</artifactId>
		  <version>33.5.0-jre</version>
		</dependency>

        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>9.0</version>
        </dependency>

        <!-- SpringDoc/swagger -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>3.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.skyscreamer</groupId>
            <artifactId>jsonassert</artifactId>
            <scope>test</scope>
    </dependency>

    </dependencies>

    <build>
        <finalName>pensjon-brevdata</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
                <version>${asciidoctor-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>process-asciidoc</goal>
                        </goals>
                        <phase>generate-resources</phase>
                    </execution>
                </executions>
                <configuration>
                    <sourceDirectory>src/</sourceDirectory>
                    <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
                    <doctype>book</doctype>
                    <backend>html5</backend>
                    <requires>asciidoctor-diagram</requires>
                    <baseDir>src/site/asciidoc</baseDir>
                    <attributes>
                        <toc-title>Innholdsfortegnelse</toc-title>
                        <important-caption>Viktig</important-caption>
                        <tip-caption>Tips</tip-caption>
                        <note-caption>NB</note-caption>
                        <table-caption>Tabell</table-caption>
                        <sectnums>true</sectnums>
                        <linkcss>true</linkcss>
                    </attributes>
                </configuration>

                <dependencies>
                    <dependency>
                        <groupId>org.asciidoctor</groupId>
                        <artifactId>asciidoctorj-diagram</artifactId>
                        <version>${asciidoctorj-diagram.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>guru.nidi</groupId>
                        <artifactId>graphviz-java</artifactId>
                        <version>${graphviz-java.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>

</project>
